# mlops-template

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
{{ cookiecutter.project_slug }}/src/: __init__.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  params.yml  requirements.txt
{{cookiecutter.project_slug}}/.github/workflows/: cd.yml  ci.yml
{{cookiecutter.project_slug}}/api/: main.py
{{cookiecutter.project_slug}}/notebooks/: 01_exploration.ipynb
{{cookiecutter.project_slug}}/src/: __init__.py
{{cookiecutter.project_slug}}/test/: __init__.py
