[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "Proyecto MLOps con Cookiecutter y Poetry"
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["mlops", "machine learning", "data science"]

{% if cookiecutter.license != "Not open source" %}
license = "{{ cookiecutter.license }}"
{% endif %}

authors = [
  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]

[tool.poetry.dependencies]
numpy = "^1.26"
pandas = "^2.2"
scikit-learn = "^1.5"

{% if cookiecutter.ml_experiment_tracker == "mlflow" %}
mlflow = {optional = true, version = "^2.4"}
{% endif %}

{% if cookiecutter.use_dvc == "y" %}
dvc = {optional = true, version = "^3.51"}
{% endif %}


[tool.poetry.extras]
dev = [
    "pytest>=8.3",
    "flake8>=6.1",
    ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"